--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "author": "zhenggl",
   "description": "蜘点中后台管理系统",
   "scripts": {
-    "lint": "eslint --fix --ext .js,.vue src",
+    "lint": "eslint --ext .js,.vue src --fix",
+    "stylelint": "stylelint \"**/*.{css,less}\" --fix",
     "unit": "jest --config test/unit/jest.conf.js",
     "dev": "cross-env NODE_ENV=development vue-cli-service serve --open",
     "dev-pro": "cross-env NODE_ENV=production vue-cli-service serve --open",
     "build:dev": "cross-env NODE_ENV=development vue-cli-service build",
-    "build:prod": "cross-env NODE_ENV=production vue-cli-service build"
+    "build:prod": "cross-env NODE_ENV=production vue-cli-service build",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -54,27 +56,42 @@
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^7.0.2",
     "css-loader": "^0.28.11",
-    "eslint": "^5.15.3",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-standard": "^3.1.0",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-plugin-vue": "^9.11.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "3.2.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "lint-staged": "^13.2.1",
     "loglevel": "^1.7.1",
+    "postcss": "^8.4.23",
+    "postcss-import": "^15.1.0",
+    "postcss-less": "^6.0.0",
+    "postcss-preset-env": "^8.3.2",
+    "prettier": "^2.8.7",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "script-loader": "0.7.2",
     "semver": "^5.7.0",
     "serve-static": "^1.13.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^0.19.1",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-less": "^1.0.6",
+    "stylelint-prettier": "^3.0.0",
+    "stylelint-scss": "^4.6.0",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
     "terser-webpack-plugin": "^1.4.5",
     "thread-loader": "^2.1.3",
     "unsupported": "^1.1.0",
     "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "^3.3.2",
+    "husky": "^8.0.0"
   }
 }
