--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-prettier/recommended"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-prettier/recommended"],
   "customSyntax": "postcss-less",
   "plugins": ["stylelint-less", "stylelint-prettier"],
   "rules": {
