--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
     "eslint-plugin-vue": "^9.11.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "husky": "^8.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "lint-staged": "^13.2.1",
     "loglevel": "^1.7.1",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
@@ -90,8 +90,8 @@
     "terser-webpack-plugin": "^1.4.5",
     "thread-loader": "^2.1.3",
     "unsupported": "^1.1.0",
+    "vue-eslint-parser": "^9.1.1",
     "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "husky": "^8.0.0"
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
